// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIBannerAction /> should render a passed qaHook as an auotmation id 1`] = `
<li
  className="xui-banner--action"
  data-automationid="banner-action"
>
  <button
    className="xui-button xui-button-small xui-button-borderless-main xui-button-small"
    data-automationid="banner-action--button"
    disabled={false}
    onClick={[Function]}
    onKeyDown={undefined}
    tabIndex={0}
    type="button"
  >
    Action
  </button>
</li>
`;

exports[`<XUIBannerAction /> should render as a button be default and includes no automation id 1`] = `
<li
  className="xui-banner--action"
  data-automationid={undefined}
>
  <button
    className="xui-button xui-button-small xui-button-borderless-main xui-button-small"
    data-automationid={undefined}
    disabled={false}
    onClick={[Function]}
    onKeyDown={undefined}
    tabIndex={0}
    type="button"
  >
    Action
  </button>
</li>
`;

exports[`<XUIBannerAction /> should render as a link if an href value is passed and isLink prop is true 1`] = `
<li
  className="xui-banner--action"
  data-automationid={undefined}
>
  <a
    aria-disabled={undefined}
    className="xui-button xui-button-small xui-button-borderless-main xui-button-small"
    data-automationid={undefined}
    disabled={false}
    href="http://xero.com"
    onClick={[Function]}
    onKeyDown={undefined}
    onKeyPress={[Function]}
    rel={undefined}
    role={undefined}
    tabIndex={0}
    target={undefined}
  >
    Action
  </a>
</li>
`;

exports[`<XUIBannerAction /> should render custom classes on the button DOM node 1`] = `
<li
  className="xui-banner--action"
  data-automationid={undefined}
>
  <button
    className="xui-button example-class xui-button-small xui-button-borderless-main xui-button-small"
    data-automationid={undefined}
    disabled={false}
    onClick={[Function]}
    onKeyDown={undefined}
    tabIndex={0}
    type="button"
  >
    Action
  </button>
</li>
`;
